# xbatcher

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.rst  conftest.py  dev-requirements.txt  pyproject.toml  readthedocs.yaml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: main.yaml  pypi-release.yaml  pypi-release.yml  release-drafter.yml  testpypi-release.yaml
asv_bench/: asv.conf.json
asv_bench/benchmarks/: __init__.py  accessors.py  batches.py  benchmarks.py  generators.py  loaders.py
ci/requirements/: asv.yml  doc.yml  environment.yml
demo/: demo.ipynb
demo/data/ACCESS-ESM1-5.historical.day.20140101.20140301.zarr/: .zattrs  .zmetadata
demo/data/ACCESS-ESM1-5.historical.day.20140101.20140301.zarr/lat/: .zarray  .zattrs  0
demo/data/ACCESS-ESM1-5.historical.day.20140101.20140301.zarr/lon/: .zarray  .zattrs  0
demo/data/ACCESS-ESM1-5.historical.day.20140101.20140301.zarr/pr/: .zarray  .zattrs
demo/data/ACCESS-ESM1-5.historical.day.20140101.20140301.zarr/tasmax/: .zarray  .zattrs
demo/data/ACCESS-ESM1-5.historical.day.20140101.20140301.zarr/tasmin/: .zattrs
demo/data/ACCESS-ESM1-5.historical.day.20140101.20140301.zarr/time/: .zarray  .zattrs  0
doc/: Makefile  api.rst  caching.ipynb  conf.py  contributing.rst  demo.ipynb  environment.yml  index.rst  roadmap.rst  tutorials-and-presentations.rst
doc/_static/: switcher.json
doc/user-guide/: caching.ipynb  create-fashion-mnist-dataset.ipynb  filtering-and-resampling.ipynb  index.rst  training-a-neural-network-with-Pytorch-and-xbatcher.ipynb  training-a-neural-network-with-keras-and-xbatcher.ipynb
notebooks/: xbatcher_pytorch_dataloader_turtorial.ipynb
xbatcher/: __init__.py  _version.py  accessors.py  features.py  generators.py  prefetch_generators.py  testing.py
xbatcher/loaders/: keras.py  torch.py
xbatcher/tests/: test_accessors.py  test_datatree.py  test_generators.py  test_keras_loaders.py  test_print_versions.py  test_to_zarr.py  test_torch_loaders.py
xbatcher/util/: print_versions.py
