[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "xbatcher"
description = "Batch generation from Xarray objects"
readme = "README.rst"
license = {text = "Apache"}
authors = [{name = "xbatcher Developers", email = "rpa@ldeo.columbia.edu"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "dask",
    "numpy",
    "xarray",
]
[project.optional-dependencies]
torch = [
    "torch",
]
tensorflow = [
    "tensorflow",
]
dev = [
    "adlfs",
    "asv",
    "coverage",
    "pytest",
    "pytest-cov",
    "tensorflow",
    "torch",
    "zarr",
]
[project.urls]
documentation = "https://xbatcher.readthedocs.io/en/latest/"
repository = "https://github.com/xarray-contrib/xbatcher"

[tool.setuptools.packages.find]
include = ["xbatcher*"]

[tool.setuptools_scm]
local_scheme = "node-and-date"
fallback_version = "999"



[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb"]


builtins = ["ellipsis"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
[tool.ruff.lint]
per-file-ignores = {}
ignore = [
    "E721", # Comparing types instead of isinstance
    "E741", # Ambiguous variable names
    "E501", # Conflicts with ruff format
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
]


[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
known-first-party = ["xbatcher"]
known-third-party = ["numpy", "pandas", "pytest", "sphinx_autosummary_accessors", "torch", "xarray"]

combine-as-imports = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
log_cli = true
log_level = "INFO"
