[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm[toml]>=6.2", "setuptools>=64"]

[project]
    authors = [
        { name = "xbatcher Developers", email = "rpa@ldeo.columbia.edu" },
    ]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python",
        "Topic :: Scientific/Engineering",
    ]
    dependencies = ["dask", "numpy", "xarray"]
    description = "Batch generation from Xarray objects"
    dynamic = ["version"]
    license = { text = "Apache" }
    name = "xbatcher"
    readme = "README.rst"
    requires-python = ">=3.10"
[project.optional-dependencies]
    dev = [
        "asv",
        "coverage",
        "pytest",
        "pytest-cov",
        "s3fs",
        "tensorflow",
        "torch",
        "zarr<4.0",
    ]
    tensorflow = ["tensorflow"]
    torch = ["torch"]
[project.urls]
    documentation = "https://xbatcher.readthedocs.io/en/latest/"
    repository    = "https://github.com/xarray-contrib/xbatcher"

[tool.setuptools.packages.find]
    include = ["xbatcher*"]

[tool.setuptools_scm]
    fallback_version = "999"
    local_scheme     = "node-and-date"

[tool.ruff]
    extend-include = ["*.ipynb"]
    target-version = "py310"

    builtins = ["ellipsis"]
    # Exclude a variety of commonly ignored directories.
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = [
        # Pyflakes
        "F",
        # Pycodestyle
        "E",
        "W",
        # isort
        "I",
        # Pyupgrade
        "UP",
    ]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    known-first-party = ["xbatcher"]
    known-third-party = [
        "numpy",
        "pandas",
        "pytest",
        "sphinx_autosummary_accessors",
        "torch",
        "xarray",
    ]

    combine-as-imports = true

[tool.ruff.format]
    docstring-code-format = true
    quote-style           = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    # Preserve types, even if a file imports `from __future__ import annotations`.
    keep-runtime-typing = true

[tool.pytest.ini_options]
    log_cli   = true
    log_level = "INFO"
